# ydui

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml
.github/workflows/: docker-image.yml  release.yml
src/: main.rs
static/: index.html
static/css/: style.css
static/js/: i18n.js  main.js
